# swarmio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  cswarm_workspace.code-workspace  package.xml
cmake/: Findconcurrentqueue.cmake  Findczmq.cmake  Findg3log.cmake  Findlibzmq.cmake  Findprotobuf.cmake  Findreaderwriterqueue.cmake  Findreplxx.cmake  Findzyre.cmake  control.tpl  toolchain-linux-arm64.cmake  toolchain-linux-armhf.cmake
cmake/dependencies/: build-concurrentqueue.cmake  build-czmq.cmake  build-g3log.cmake  build-libconfig.cmake  build-libzmq.cmake  build-protobuf.cmake  build-readerwriterqueue.cmake  build-replxx.cmake  build-sodium.cmake  build-zyre.cmake
cmake/helpers/: build-component.cmake  build-package.cmake  cxx-standard.cmake  prepare-architecture.cmake  prepare-mode.cmake  prepare-multistrap.cmake
cmake/patches/: g3log-cpack-prefix.patch  protobuf-js_embed-path.patch
cmake/templates/: multistrap-ubuntu-ros.tpl  multistrap-ubuntu.tpl  reroot-symlinks.tpl
cmake/toolchains/: linux-clang-amd64.cmake  linux-clang-arm64.cmake  linux-clang-armhf.cmake  linux-clang.cmake  linux-gcc-amd64.cmake  linux-gcc-arm64.cmake  linux-gcc-armhf.cmake  linux-gcc.cmake  linux.cmake  osx-clang.cmake  (+6 more)
dependencies/: CMakeLists.txt
docs/: index.html
libswarmio/: CMakeLists.txt  Doxyfile
libswarmio/include/swarmio/: Endpoint.h  Exception.h  Mailbox.h  Node.h
libswarmio/include/swarmio/data/: Helper.h
libswarmio/include/swarmio/profiles/: ClientProfile.h  MemberProfile.h  Profile.h
libswarmio/include/swarmio/services/: Awaiter.h  ErrorAwaiter.h  PeriodicService.h  StatusAwaiter.h
libswarmio/include/swarmio/services/discovery/: Discoverable.h  DiscoveryAwaiter.h  Observer.h  Service.h
libswarmio/include/swarmio/services/event/: Handler.h  Service.h
libswarmio/include/swarmio/services/keyvalue/: Service.h  Target.h  ValueAwaiter.h
libswarmio/include/swarmio/services/ping/: Service.h  TimingAwaiter.h
libswarmio/include/swarmio/services/telemetry/: Observer.h  Service.h  Tracker.h  UpdateAwaiter.h
libswarmio/include/swarmio/simulator/: ExampleDevice.h  FauxEventHandler.h  InMemoryParameter.h  LinearPathTelemetrySimulator.h  SimulatedLocation.h
libswarmio/include/swarmio/tool/: LogBuffer.h
libswarmio/include/swarmio/transport/: BasicEndpoint.h  BasicNode.h
libswarmio/include/swarmio/transport/zyre/: ZyreControlSocket.h  ZyreEndpoint.h  ZyreNode.h
libswarmio/proto/swarmio/data/: Error.proto  Header.proto  Message.proto  Reliability.proto  Variant.proto
libswarmio/proto/swarmio/data/discovery/: Request.proto  Response.proto  Schema.proto  Type.proto
libswarmio/proto/swarmio/data/event/: Descriptor.proto  Notification.proto
libswarmio/proto/swarmio/data/keyvalue/: Descriptor.proto  GetRequest.proto  GetResponse.proto  SetRequest.proto
libswarmio/proto/swarmio/data/ping/: Echo.proto
libswarmio/proto/swarmio/data/telemetry/: Descriptor.proto  Status.proto  SubscribeRequest.proto  UnsubscribeRequest.proto  Update.proto
libswarmio/src/swarmio/data/: Helper.cpp
libswarmio/src/swarmio/profiles/: ClientProfile.cpp  MemberProfile.cpp
libswarmio/src/swarmio/services/: ErrorAwaiter.cpp  PeriodicService.cpp  StatusAwaiter.cpp
libswarmio/src/swarmio/services/discovery/: Service.cpp
libswarmio/src/swarmio/services/event/: Service.cpp
libswarmio/src/swarmio/services/keyvalue/: Service.cpp  ValueAwaiter.cpp
libswarmio/src/swarmio/services/ping/: Service.cpp  TimingAwaiter.cpp
libswarmio/src/swarmio/services/telemetry/: Service.cpp
libswarmio/src/swarmio/simulator/: ExampleDevice.cpp  LinearPathTelemetrySimulator.cpp  main.cpp
libswarmio/src/swarmio/test/: logparser.py  test_installer.sh
libswarmio/src/swarmio/tool/: Loop.cpp  main.cpp
libswarmio/src/swarmio/transport/: BasicEndpoint.cpp  base64.cpp
libswarmio/src/swarmio/transport/zyre/: ZyreControlSocket.cpp  ZyreEndpoint.cpp
swarmio-simulator/: CMakeLists.txt
swarmio-simulator/include/swarmio/simulator/: ExampleDevice.h  InMemoryParameter.h
swarmio-simulator/src/: main.cpp
swarmio-simulator/src/swarmio/simulator/: ExampleDevice.cpp
swarmio-tool/: CMakeLists.txt
swarmio-tool/include/swarmio/tool/: Command.h  Loop.h
swarmio-tool/src/: main.cpp
swarmio-tool/src/swarmio/tool/: Command.cpp  Loop.cpp
swarmros/: CMakeLists.txt  package.xml
swarmros/docs/: manifest.yaml
swarmros/docs/html/: graph_legend.html  index-msg.html  index.html
swarmros/docs/html/msg/: ArrayOfDouble.html  ArrayOfUInt.html  Bool.html  ExampleComplexSubmessage.html  NodeInfo.html
swarmros/include/swarmros/: Exception.h  UnqualifiedException.h
swarmros/include/swarmros/bridge/: DebugSink.h  Device.h  EventForwarder.h  EventMessage.h  EventPublisher.h  MessageMismatchException.h  Node.h  ParameterPublisher.h  ParameterTarget.h  Pylon.h  TelemetryForwarder.h  TelemetrySource.h
swarmros/include/swarmros/example/: Node.h
swarmros/include/swarmros/introspection/: AnyMessage.h  ArrayField.h  ConstantField.h  CountMismatchException.h  Field.h  FieldStack.h  FixedArrayField.h  HeadedMessage.h  IndexedFieldStack.h  KeyedFieldStack.h  Message.h  MessageDefinitionParserException.h  MessageSerializer.h  PrimitiveSerializer.h  RootFieldStack.h  SchemaMismatchException.h  Serializer.h  TypeMismatchException.h  VariantMessage.h
swarmros/msg/: ArrayOfBool.msg  ArrayOfDouble.msg  ArrayOfInt.msg  ArrayOfString.msg  ArrayOfUInt.msg  Event.msg  EventHeader.msg  ExampleComplexMessage.msg  ExampleComplexSubmessage.msg  ExampleEvent.msg  NodeInfo.msg  SimpleEvent.msg  UInt.msg
swarmros/resources/: swarmros.cfg  swarmros.cfg.example
swarmros/src/: main.cpp
swarmros/src/swarmros/bridge/: DebugSink.cpp  Device.cpp  EventForwarder.cpp  EventPublisher.cpp  Node.cpp  ParameterPublisher.cpp  ParameterTarget.cpp  TelemetryForwarder.cpp  TelemetrySource.cpp  main.cpp
swarmros/src/swarmros/example/: Node.cpp  main.cpp
swarmros/src/swarmros/introspection/: ArrayField.cpp  ConstantField.cpp  Field.cpp  FixedArrayField.cpp  MessageSerializer.cpp  PrimitiveSerializer.cpp  Serializer.cpp
(+206 files in other folders)
